--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ew",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tsamuel1289.github.io/ew",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.6.3",
     "ismobilejs": "^1.1.1",
+    "nosleep.js": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
@@ -30,6 +32,8 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "mini-css-extract-plugin": "2.4.5"
   }
 }
