--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ew",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tsamuel1289.github.io/ew",
+  "homepage": "https://tsamuel1289.github.io/ew/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -13,11 +13,11 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.0.1",
-    "sass": "^1.48.0",
+    "react-scripts": "^5.0.0",
+    "sass": "^1.49.7",
     "use-sound": "^4.0.1",
     "web-vitals": "^0.2.4",
-    "webpack": "4.42.0",
+    "webpack": "^5.0.0",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
