--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Emanuel Worship",
-  "name": "Emanuel Worship",
+  "short_name": "Emanuel_Worship",
+  "name": "Emanuel_Worship",
   "icons": [
     {
       "src": "favicon.ico",
